# axum-seaorm-tutorial

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
migrations/: init.sql
src/: handlers.rs  main.rs
src/entities/: user.rs
