[package]
name = "axum-seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
chrono = "0.4.42"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15.7"
